Substituídas as consultas JPA por SQL nativo em todos os métodos.