@@ -1,23 +1,24 @@
 package br.com.cesurgmarau.trabalho_final.infra.repository;
 
-import br.com.cesurgmarau.trabalho_final.core.domain.contract.RelatorioRepository;
 import br.com.cesurgmarau.trabalho_final.core.domain.contract.ComentarioRepository;
+import br.com.cesurgmarau.trabalho_final.core.domain.contract.RelatorioRepository;
 import br.com.cesurgmarau.trabalho_final.core.dto.RelatorioSentimentosResponse;
 import br.com.cesurgmarau.trabalho_final.core.dto.RelatorioUsuarioResponse;
 import br.com.cesurgmarau.trabalho_final.core.dto.RelatorioProdutoResponse;
-import br.com.cesurgmarau.trabalho_final.core.domain.entity.Comentario;
-import br.com.cesurgmarau.trabalho_final.core.util.SentimentoUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
+import jakarta.persistence.EntityManager;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.Comparator;
 
 @Repository
 public class RelatorioRepositoryImpl implements RelatorioRepository {
 
+    @Autowired
     private final ComentarioRepository comentarioRepository;
+
+    @Autowired
+    private EntityManager entityManager;
 
     public RelatorioRepositoryImpl(ComentarioRepository comentarioRepository) {
         this.comentarioRepository = comentarioRepository;
@@ -25,54 +26,53 @@ public class RelatorioRepositoryImpl implements RelatorioRepository {
 
     @Override
     public List<RelatorioSentimentosResponse> totalComentariosPorSentimento() {
-        List<Comentario> comentarios = comentarioRepository.buscarTodos();
+        String query = """
+            SELECT sentimento, COUNT(*) 
+            FROM comentarios 
+            GROUP BY sentimento
+        """;
 
-        Map<String, Long> agrupado = comentarios.stream()
-                .collect(Collectors.groupingBy(
-                        Comentario::getSentimento,
-                        Collectors.counting()
-                ));
+        List<Object[]> resultado = entityManager.createNativeQuery(query).getResultList();
 
-        return agrupado.entrySet().stream()
-                .map(entry -> new RelatorioSentimentosResponse(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+        return resultado.stream()
+                .map(entry -> new RelatorioSentimentosResponse((String) entry[0], ((Number) entry[1]).longValue()))
+                .toList();
     }
 
     @Override
     public List<RelatorioProdutoResponse> mediaSentimentoPorProduto() {
-        List<Comentario> comentarios = comentarioRepository.buscarTodos();
+        String query = """
+            SELECT produto_id, AVG(
+                    CASE
+                        WHEN LOWER(sentimento) = 'positivo' THEN 1
+                        WHEN LOWER(sentimento) = 'negativo' THEN -1
+                        ELSE 0
+                    END
+                ) 
+            FROM comentarios 
+            GROUP BY produto_id
+        """;
 
-        Map<Integer, List<Comentario>> agrupadoPorProduto = comentarios.stream()
-                .collect(Collectors.groupingBy(Comentario::getProdutoId));
+        List<Object[]> resultado = entityManager.createNativeQuery(query).getResultList();
 
-        return agrupadoPorProduto.entrySet().stream()
-                .map(entry -> {
-                    Integer produtoId = entry.getKey();
-                    List<Comentario> comentariosDoProduto = entry.getValue();
-
-                    double media = comentariosDoProduto.stream()
-                            .mapToInt(c -> SentimentoUtils.converterSentimentoParaPontuacao(c.getSentimento()))
-                            .average()
-                            .orElse(0.0);
-
-                    return new RelatorioProdutoResponse(produtoId, media);
-                })
-                .collect(Collectors.toList());
+        return resultado.stream()
+                .map(entry -> new RelatorioProdutoResponse((Integer) entry[0], (Double) entry[1]))
+                .toList();
     }
 
     @Override
     public List<RelatorioUsuarioResponse> rankingUsuariosMaisAtivos() {
-        List<Comentario> comentarios = comentarioRepository.buscarTodos();
+        String query = """
+            SELECT usuario_id, COUNT(*) 
+            FROM comentarios 
+            GROUP BY usuario_id
+            ORDER BY COUNT(*) DESC
+        """;
 
-        Map<Integer, Long> agrupadoPorUsuario = comentarios.stream()
-                .collect(Collectors.groupingBy(
-                        Comentario::getUsuarioId,
-                        Collectors.counting()
-                ));
+        List<Object[]> resultado = entityManager.createNativeQuery(query).getResultList();
 
-        return agrupadoPorUsuario.entrySet().stream()
-                .map(entry -> new RelatorioUsuarioResponse(entry.getKey(), entry.getValue()))
-                .sorted(Comparator.comparing(RelatorioUsuarioResponse::getQuantidadeComentarios).reversed())
-                .collect(Collectors.toList());
+        return resultado.stream()
+                .map(entry -> new RelatorioUsuarioResponse((Integer) entry[0], ((Number) entry[1]).longValue()))
+                .toList();
     }
 }
